--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@
                     <div class="table-responsive">
                         <table class="table table-sm table-borderless">
                             <tr>
+                                <th >04/2024</th>
+                                <td> Accepted my PhD offer at the <strong> University of Illinois at Urbana-Champaign! </strong> Very excited to start working with professor <strong><a href="https://cs.illinois.edu/about/people/all-faculty/dilek">Dilek Hakkani-Tur</a></strong>. </td>
+                            </tr>
+                            <tr>
                                 <th >01/2024</th>
-                                <td> <strong>🎉 Exciting News! 🎉</strong> My  submission has been accepted at <strong><a href="https://sites.google.com/view/codi2024">CODI 2024</a></strong>, the workshop on Computational Approaches to Discourse, part of <a href="https://www.eacl2024.org"><strong>EACL 2024</strong></a>. </td>
+                                <td> 🎉 My  submission has been accepted at <strong><a href="https://sites.google.com/view/codi2024">CODI 2024</a></strong>, the workshop on Computational Approaches to Discourse, part of <a href="https://www.eacl2024.org"><strong>EACL 2024</strong></a>. </td>
                             </tr>
                             <tr>
                                 <th >01/2024</th>
@@ -72,11 +76,11 @@
                             </tr>
                             <tr>
                                 <th >10/2023</th>
-                                <td> <strong>🎉 Exciting News! 🎉</strong> My paper has been accepted at <strong><a href="https://2023.emnlp.org/">EMNLP 2023</a></strong>! Looking forward to attending my first research conference and presenting my work in Singapore! </td>
+                                <td> 🎉 My paper has been accepted at <strong><a href="https://2023.emnlp.org/">EMNLP 2023</a></strong>! Looking forward to attending my first research conference and presenting my work in Singapore! </td>
                             </tr>
                             <tr>
                                 <th >08/2023</th>
-                                <td> Submitted my first paper on automatic evaluation of generative models to the <strong><a href="https://gem-benchmark.com/workshop">Gem Workshop</a> at <a href="https://2023.emnlp.org/">EMNLP 2023</a></strong>. </td>
+                                <td> Submitted my first paper on automatic evaluation of generative models to the <strong><a href="https://gem-benchmark.com/workshop">Gem Workshop</a>. </td>
                             </tr>
                             <tr>
                                 <th >08/2023</th>
@@ -94,7 +98,7 @@
                         <li>
 
                                     <div>
-                                        <b>Shuhaib Mehri</b>, Vered Shwartz. <b><a href="https://arxiv.org/abs/2310.20072">Automatic Evaluation of Generative Models with Instruction Tuning</a></b> <br>
+                                        <b>Shuhaib Mehri</b>, Vered Shwartz. <b><a href="https://aclanthology.org/2023.gem-1.4/">Automatic Evaluation of Generative Models with Instruction Tuning</a></b> <br>
 
                                         <i>in Empirical Methods in Natural Language Processing (EMNLP) 2023.</i></div>
 
