--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </p>
                     
                     <p>My primary research interest lies in the natural language processing field. In the past,
-                        I have worked on automatic evaluation of generative tasks, modeling discourse relations, and information extraction.</p>
+                        I have worked on modeling discourse parsing, information extraction, and evaluation of generative tasks.</p>
                     <p>
                         Previously, I earned my BSc from the <a href="https://www.ubc.ca/">University of British Columbia</a>, 
                         where I had the opportunity to work with professors <a href="https://www.cs.ubc.ca/~vshwartz/">Vered Shwartz</a> and <a href="https://www.cs.ubc.ca/~carenini/">Giuseppe Carenini</a>.
