--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
                     <div>
                         <h1>Shuhaib Mehri</h1>
                         <h5 style="text-align: center;">
-                            PhD @ <a style="font-weight: bold;" href="https://siebelschool.illinois.edu/">UIUC</a>
+                            PhD @ <a style="font-weight: bold;" href="https://siebelschool.illinois.edu/" class="header_link">UIUC</a>
                         </h5>
 
                         <div class="mt-4  ml-3" style="text-align: center;">
-                            <a class="mr-4" href="./assets/cv.pdf" style="font-size:20px;">
+                            <a class="mr-4 header_link" href="./assets/cv.pdf" style="font-size:20px;">
                                 <i class="ai ai-cv ai-1x"></i></a>
                             <!-- <a class="mr-4" href="./assets/ShuhaibMehriResume.pdf" style="font-size:20px; color: black;">
                                 <i class="fa-regular fa-file"></i></a> -->
-                            <a class="mr-4" href="https://scholar.google.ca/citations?user=nJE1T2cAAAAJ&hl=en&oi=ao">
+                            <a class="mr-4 header_link" href="https://scholar.google.ca/citations?user=nJE1T2cAAAAJ&hl=en&oi=ao">
                                 <i style="font-size:20px;" class="fa-solid fa-graduation-cap"></i></a>
-                            <a class="mr-4" href="https://github.com/Shuhaibm">
+                            <a class="mr-4 header_link" href="https://github.com/Shuhaibm">
                                 <i style="font-size:20px; " class="fab fa-github"></i></a>
-                            <a class="mr-4" href="https://www.linkedin.com/in/shuhaib-mehri-b8a125197/">
+                            <a class="mr-4 header_link" href="https://www.linkedin.com/in/shuhaib-mehri-b8a125197/">
                                 <i style="font-size:20px;" class="fab fa-linkedin"></i></a>
-                            <a href="https://twitter.com/ShuhaibMehri" class="mr-4">
+                            <a href="https://twitter.com/ShuhaibMehri" class="mr-4 header_link">
                                 <i style="font-size:20px;" class="fa-brands fa-twitter"></i></a>
                             <!-- <a class="mr-4" href="mailto:mesm.shuhaib@gmail.com">
                                 <i style="font-size:20px; color: black;" class="fas fa-envelope"></i></a> -->
@@ -82,7 +82,7 @@
                         <table class=table-sm table-borderless">
                             <tr>
                                 <th >04/2024</th>
-                                <td> Accepted my PhD offer at the <strong> University of Illinois at Urbana-Champaign! </strong> Very excited to start working with professor <a href="https://cs.illinois.edu/about/people/all-faculty/dilek">Dilek Hakkani-Tur</a>. </td>
+                                <td> I accepted my PhD offer from <strong>UIUC CS</strong>! Very excited to start in Fall 2024. </td>
                             </tr>
                             <tr>
                                 <th >01/2024</th>
