--- a/index.html
+++ b/index.html
@@ -63,11 +63,16 @@
                          advised by <a href="https://cs.illinois.edu/about/people/all-faculty/dilek">Dilek Hakkani-Tur</a>.
                     </p>
                     
-                    <p>My primary research interest lies in the natural language processing field. In the past,
-                        I have worked on modeling discourse parsing, information extraction, and evaluation of generative tasks.</p>
                     <p>
-                        Previously, I earned my BSc from the <a href="https://www.ubc.ca/">University of British Columbia</a>, 
-                        where I had the opportunity to work with professors <a href="https://www.cs.ubc.ca/~vshwartz/">Vered Shwartz</a> and <a href="https://www.cs.ubc.ca/~carenini/">Giuseppe Carenini</a>.
+                        My primary research interest lies in the natural language processing field.
+                        Some topics I am currently working on include instruction-tuning, data synthesis, persuasion, and evaluation.
+
+                        In the past, I have worked on modeling prompting, discourse parsing, information extraction, and evaluation of generative tasks.
+                    </p>
+                    <p>
+                        Previously, I earned my BSc from the <a href="https://www.ubc.ca/">University of British Columbia</a>,
+                        where I was fortune enough to work with professors <a href="https://www.cs.ubc.ca/~vshwartz/">Vered Shwartz</a> and <a href="https://www.cs.ubc.ca/~carenini/">Giuseppe Carenini</a>.
+                        Additionally, I completed internships at iClinic Systems, Amazon (x3), and Clir Renewables.
                     </p>
 
                     
@@ -90,7 +95,7 @@
                             </tr>
                             <tr>
                                 <th >01/2024</th>
-                                <td> Started my internship at <strong>iClinic Systems Inc.</strong> today. I will be working on information extraction in a clinical setting.</td>
+                                <td> I was awarded the <a href="https://www.mitacs.ca/our-programs/accelerate-fellowship-students-postdocs/">Mitacs Accelerate Fellowship for Master's and PhD Students</a> as an undergraduate student. Today is my first day at <strong>iClinic Systems Inc.</strong>, I'm excited to start working on information extraction in a clinical setting!</td>
                             </tr>
                             <tr>
                                 <th >10/2023</th>
