--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </p>
                     <p>
                         Previously, I earned my BSc from the <a href="https://www.ubc.ca/">University of British Columbia</a>,
-                        where I was fortune enough to work with professors <a href="https://www.cs.ubc.ca/~vshwartz/">Vered Shwartz</a> and <a href="https://www.cs.ubc.ca/~carenini/">Giuseppe Carenini</a>.
+                        where I was fortunate enough to work with professors <a href="https://www.cs.ubc.ca/~vshwartz/">Vered Shwartz</a> and <a href="https://www.cs.ubc.ca/~carenini/">Giuseppe Carenini</a>.
                         Additionally, I completed internships at iClinic Systems, Amazon (x3), and Clir Renewables.
                     </p>
 
@@ -120,10 +120,11 @@
                     <ul class="bibliography">
                         <li>
 
-                                    <div>
-                                        <b>Shuhaib Mehri</b>, Vered Shwartz. <b><a href="https://aclanthology.org/2023.gem-1.4/">Automatic Evaluation of Generative Models with Instruction Tuning</a></b> <br>
+                            <div>
+                                <b>Shuhaib Mehri</b>, Vered Shwartz. <b><a href="https://aclanthology.org/2023.gem-1.4/">Automatic Evaluation of Generative Models with Instruction Tuning</a></b> <br>
 
-                                        <i>in Empirical Methods in Natural Language Processing (EMNLP) 2023.</i></div>
+                                <i>in Empirical Methods in Natural Language Processing (EMNLP) 2023.</i>
+                            </div>
 
 
                         </li>
