--- a/index.html
+++ b/index.html
@@ -129,9 +129,17 @@
                     <h3><bold>Publications</bold></h3>
                     <ul class="bibliography">
                         <li>
+                            <div>
+                                <strong>Shuhaib Mehri</strong>, Xiusi Chen, Heng Ji, Dilek Hakkani-T&uumlr. <b><a href="https://arxiv.org/abs/2502.04511">Beyond Sample-Level Feedback: Using Reference-Level Feedback to Guide Data Synthesis
+                                </a></b> <br>
+
+                                <i>Preprint.</i>
+                            </div>
+                        </li>
+                        <li>
 
                             <div>
-                                <b>Shuhaib Mehri</b>, Vered Shwartz. <b><a href="https://aclanthology.org/2023.gem-1.4/">Automatic Evaluation of Generative Models with Instruction Tuning</a></b> <br>
+                                <Strong>Shuhaib Mehri</Strong>, Vered Shwartz. <b><a href="https://aclanthology.org/2023.gem-1.4/">Automatic Evaluation of Generative Models with Instruction Tuning</a></b> <br>
 
                                 <i>in Empirical Methods in Natural Language Processing (EMNLP) 2023.</i>
                             </div>
