--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <ul class="bibliography">
                         <li style="margin-bottom: 1rem;">
                             <div>
-                                <strong>Goal Alignment in LLM-Based User Simulators for Conversational AI</strong> [<a href="">Paper</a>]<br>
+                                <strong>Goal Alignment in LLM-Based User Simulators for Conversational AI</strong> [<a href="https://arxiv.org/abs/2507.20152">Paper</a>]<br>
                                 <div style="padding-left: 1.5em; line-height: 1.4;">
                                     <u>Shuhaib Mehri</u>, Xiaocheng Yang, Takyoung Kim, Gokhan Tur, Shikib Mehri, Dilek Hakkani-T&uumlr.<br>
                                     <i>Preprint.</i>
