--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </p>
                     
                     <p>
-                        My research centers on natural language processing and large language models, where I'm particularly interested in conversational AI, evaluation, and synthetic data generation. Recent works include user simulation, retrieval-augmented generation, tool-calling, instruction-tuning, persuasion, and discourse parsing. I am currently a research scientist intern at IBM Research.
+                        I am interested in building user-centric agents that can effectively interact with users. My current work explores (1) multi-turn amd mixed initiative training, (2) continual learning across multiple sessions, and (3) reliable and realistic user simulation.
                     </p>
                     <p>
                         Before starting my PhD, I earned my BSc from the <a href="https://www.ubc.ca/">University of British Columbia</a>, where I was fortunate enough to work with professors <a href="https://www.cs.ubc.ca/~vshwartz/">Vered Shwartz</a> and <a href="https://www.cs.ubc.ca/~carenini/">Giuseppe Carenini</a>.
@@ -89,16 +89,20 @@
                     <div class="table-responsive">
                         <table class=table-sm table-borderless">
                             <tr>
+                                <th >09/2025</th>
+                                <td> 🎉 One paper accepted to <strong>TACL</strong></td>
+                            </tr>
+                            <tr>
                                 <th >05/2025</th>
-                                <td> Starting my Research Scientist Internship at IBM Research in San Jose.</td>
+                                <td> Starting my Research Scientist Internship at <strong>IBM Research</strong> in San Jose</td>
                             </tr>
                             <tr>
                                 <th >04/2024</th>
-                                <td> I accepted my PhD offer from <strong>UIUC CS</strong>! Very excited to start in Fall 2024. </td>
+                                <td> I accepted my PhD offer from <strong>UIUC CS</strong>! Very excited to start in Fall 2024 </td>
                             </tr>
                             <tr>
                                 <th >01/2024</th>
-                                <td> 🎉 My  submission has been accepted at <a href="https://sites.google.com/view/codi2024">CODI 2024</a>, the workshop on Computational Approaches to Discourse, part of <a href="https://www.eacl2024.org">EACL 2024</a>. </td>
+                                <td> 🎉 My  submission has been accepted to <a href="https://sites.google.com/view/codi2024">CODI 2024</a> at EACL 2024 </td>
                             </tr>
                             <tr>
                                 <th >01/2024</th>
@@ -106,7 +110,7 @@
                             </tr>
                             <tr>
                                 <th >10/2023</th>
-                                <td> 🎉 My paper has been accepted at <a href="https://2023.emnlp.org/">EMNLP 2023</a>! Looking forward to attending my first research conference and presenting in Singapore! </td>
+                                <td> 🎉 Our paper has been accepted at EMNLP 2023! Looking forward to attending my first research conference and presenting in Singapore! </td>
                             </tr>
                             <!-- <tr>
                                 <th >08/2023</th>
@@ -122,7 +126,7 @@
 
                 
                 <div class="publications mt-5">
-                    <h3><bold>Publications</bold></h3>
+                    <h3><bold>Selected Publications</bold></h3>
                     <ul class="bibliography">
                         <li style="margin-bottom: 1rem;">
                             <div>
