--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                     </p>
                     
                     <p>
-                        I am interested in building user-centric agents that can effectively interact with users. My current work explores (1) multi-turn amd mixed initiative training, (2) continual learning across multiple sessions, and (3) reliable and realistic user simulation.
+                        I am interested in building human-centered agents that can effectively interact with users. My current work explores (1) multi-turn amd mixed-initiative conversational agents, (2) continual learning throughout multi-session interactions, and (3) reliable and realistic user simulation.
                     </p>
                     <p>
                         Before starting my PhD, I earned my BSc from the <a href="https://www.ubc.ca/">University of British Columbia</a>, where I was fortunate enough to work with professors <a href="https://www.cs.ubc.ca/~vshwartz/">Vered Shwartz</a> and <a href="https://www.cs.ubc.ca/~carenini/">Giuseppe Carenini</a>.
-                        Additionally, I completed internships at iClinic Systems, Amazon (x3), and Clir Renewables.
+                        Additionally, I completed internships at Amazon (x3), iClinic Systems, and Clir Renewables.
                     </p>
                 </div>
 
