--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </p>
                     
                     <p>
-                        I am interested in building human-centered agents that can effectively interact with users. My current work explores (1) multi-turn amd mixed-initiative conversational agents, (2) continual learning throughout multi-session interactions, and (3) reliable and realistic user simulation.
+                        I am interested in building human-centered agents that can effectively interact with users. My current work explores (1) multi-turn and mixed-initiative conversational agents, (2) continual learning throughout multi-session interactions, and (3) reliable and realistic user simulation.
                     </p>
                     <p>
                         Before starting my PhD, I earned my BSc from the <a href="https://www.ubc.ca/">University of British Columbia</a>, where I was fortunate enough to work with professors <a href="https://www.cs.ubc.ca/~vshwartz/">Vered Shwartz</a> and <a href="https://www.cs.ubc.ca/~carenini/">Giuseppe Carenini</a>.
