--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
                         <table class=table-sm table-borderless">
                             <tr>
                                 <th >09/2025</th>
-                                <td> 🎉 One paper accepted to <strong>TACL</strong></td>
+                                <td> 🎉 One paper accepted to <strong>EACL</strong> (oral)</td>
+                            </tr>
+                            <tr>
+                                <th >09/2025</th>
+                                <td> 🎉 Our work on user simulation got accepted to <strong>TACL</strong></td>
                             </tr>
                             <tr>
                                 <th >05/2025</th>
@@ -108,10 +112,10 @@
                                 <th >01/2024</th>
                                 <td> I was awarded the <a href="https://www.mitacs.ca/our-programs/accelerate-fellowship-students-postdocs/">Mitacs Accelerate Fellowship for Master's and PhD Students</a> as an undergraduate student. Today is my first day at <strong>iClinic Systems Inc.</strong>, I'm excited to start working on information extraction in a clinical setting!</td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
                                 <th >10/2023</th>
                                 <td> 🎉 Our paper has been accepted at EMNLP 2023! Looking forward to attending my first research conference and presenting in Singapore! </td>
-                            </tr>
+                            </tr> -->
                             <!-- <tr>
                                 <th >08/2023</th>
                                 <td> Submitted my first paper on automatic evaluation of generative models to the <a href="https://gem-benchmark.com/workshop">Gem Workshop</a>. </td>
@@ -130,14 +134,23 @@
                     <ul class="bibliography">
                         <li style="margin-bottom: 1rem;">
                             <div>
-                                <strong>Goal Alignment in LLM-Based User Simulators for Conversational AI</strong> [<a href="https://arxiv.org/abs/2507.20152">Paper</a>]<br>
+                                <strong>Learning User Preferences Through Interaction for Long-Term Collaboration</strong> [<a href="https://arxiv.org/abs/2601.02702">Paper</a>]<br>
                                 <div style="padding-left: 1.5em; line-height: 1.4;">
-                                    <u>Shuhaib Mehri</u>, Xiaocheng Yang, Takyoung Kim, Gokhan Tur, Shikib Mehri, Dilek Hakkani-T&uumlr.<br>
-                                    <i>Preprint.</i>
+                                    <u>Shuhaib Mehri</u>, Priyanka Kargupta, Tal August, Dilek Hakkani-T&uumlr.<br>
+                                    <i>Preprint</i>
                                 </div>
                             </div>
                         </li>
                         <li style="margin-bottom: 1rem;">
+                            <div>
+                                <strong>Goal Alignment in LLM-Based User Simulators for Conversational AI</strong> [<a href="https://arxiv.org/abs/2507.20152">Paper</a>]<br>
+                                <div style="padding-left: 1.5em; line-height: 1.4;">
+                                    <u>Shuhaib Mehri</u>, Xiaocheng Yang, Takyoung Kim, Gokhan Tur, Shikib Mehri, Dilek Hakkani-T&uumlr.<br>
+                                    <i>TACL 2025 (Oral at ACL 2026)</i>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- <li style="margin-bottom: 1rem;">
                             <div>
                                 <strong>Must Read: A Systematic Survey of Computational Persuasion</strong> [<a href="https://arxiv.org/abs/2505.07775">Paper</a>]<br>
                                 <div style="padding-left: 1.5em; line-height: 1.4;">
@@ -145,8 +158,8 @@
                                     <i>Preprint.</i>
                                 </div>
                             </div>
-                        </li>
-                        <li style="margin-bottom: 1rem;">
+                        </li> -->
+                        <!-- <li style="margin-bottom: 1rem;">
                             <div>
                                 <strong>PIPA: A Unified Evaluation Protocol for Diagnosing Interactive Planning Agents</strong> [<a href="https://arxiv.org/abs/2505.01592">Paper</a>]<br>
                                 <div style="padding-left: 1.5em; line-height: 1.4;">
@@ -154,8 +167,8 @@
                                     <i>Preprint.</i>
                                 </div>
                             </div>
-                        </li>
-                        <li style="margin-bottom: 1rem;">
+                        </li> -->
+                        <!-- <li style="margin-bottom: 1rem;">
                             <div>
                                 <strong>Persuade Me if You Can: A Framework for Evaluating Persuasion Effectiveness and Susceptibility Among Large Language Models</strong> [<a href="https://arxiv.org/abs/2503.01829">Paper</a>]<br>
                                 <div style="padding-left: 1.5em; line-height: 1.4;">
@@ -163,17 +176,17 @@
                                     <i>Preprint.</i>
                                 </div>
                             </div>
-                        </li>
+                        </li> -->
                         <li style="margin-bottom: 1rem;">
                             <div>
                                 <strong>Beyond Sample-Level Feedback: Using Reference-Level Feedback to Guide Data Synthesis</strong> [<a href="https://arxiv.org/abs/2502.04511">Paper</a>]<br>
                                 <div style="padding-left: 1.5em; line-height: 1.4;">
                                     <u>Shuhaib Mehri</u>, Xiusi Chen, Heng Ji, Dilek Hakkani-T&uumlr.<br>
-                                    <i>Preprint.</i>
+                                    <i>EACL 2026 (Oral)</i>
                                 </div>
                             </div>
                         </li>
-                        <li style="margin-bottom: 1rem;">
+                        <!-- <li style="margin-bottom: 1rem;">
                             <div>
                                 <strong>Automatic Evaluation of Generative Models with Instruction Tuning</strong> [<a href="https://aclanthology.org/2023.gem-1.4/">Paper</a>]<br>
                                 <div style="padding-left: 1.5em; line-height: 1.4;">
@@ -181,7 +194,7 @@
                                     <i>EMNLP 2023 GEM Workshop.</i>
                                 </div>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
 
